<resources>
    <string name="app_name">SIPNAS POLBANGTAN</string>
    <string name="app_name_short">SIPNAS</string>
    <string name="nip">Email / NIP</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="ask_register">Belum Daftar Akun ?</string>
    <string name="click_here">Klik disini</string>
    <string name="register_info">Silahkan mengambil akun SIPNAS POLBANGTAN dibagian kepegawaian</string>
    <string name="thanks">Terima Kasih</string>
    <string name="user_information">Informasi Pengguna</string>
    <string name="process">Proses</string>
    <string name="done">Selesai</string>
    <string name="statistic">Statistik</string>
    <string name="title_jadwal_berangkat">Jadwal Pemberangkatan</string>
    <string name="subtitle_login">Sistem Perjalanan Dinas Online\nPoliteknik Pembangunan Pertanian Gowa</string>
    <string name="forget_password">Lupa Kata Sandi ?</string>
    <string name="rincian_biaya">Rincian Biaya</string>
    <string name="daily_money">Uang Harian</string>
    <string name="transportation_cost">Biaya Transportasi</string>
    <string name="transportation_cost_a">a. Transportasi dari Rumah ke Bandara dan Ke tempat Tujuan (Pergi/Pulang)</string>
    <string name="transportation_cost_b">b. Tiket Pesawat dari %1$s ke %2$s</string>
    <string name="transportation_cost_c">c. Boarding Pass dan Airport Tax</string>
    <string name="transportation_cost_d">d. Tiket Pesawat dari %1$s ke %2$s</string>
    <string name="transportation_cost_e">e. Boarding Pass dan Airport Tax</string>
    <string name="cost_accommodation">Biaya Penginapan</string>
    <string name="total">Jumlah</string>
    <string name="upload_evidence">Upload Bukti Pendukung</string>
    <string name="upload_proof">Upload Bukti</string>
    <string name="desc">Keterangan</string>
    <string name="cancel">Batal</string>
    <string name="upload">Upload</string>
    <string name="insert_file">Masukkan Berkas Anda</string>
    <string name="proof_spj">Bukti SPJ</string>
    <string name="photos_activities">Foto Kegiatan</string>
    <string name="camera_not_allowed">Akses Kamera Tidak Di Izinkan</string>
    <string name="retry">Coba Lagi</string>
    <string name="storage_not_allowed">Membaca Folder Tidak Di Izinkan</string>
    <string name="camera">Kamera</string>
    <string name="file_manager">File Manager</string>
    <string name="choose_source">Ambil Gambar Dari :</string>
    <string name="spd">Surat Perjalanan Dinas (SPD)</string>
    <string name="no_spd">Nomor : %1$s</string>
    <string name="title_1">1. Pejabat Pembuat Komitmen</string>
    <string name="content_1">&#160;&#160;&#160;%1$s</string>
    <string name="title_2">2. Nama/NIP Pegawai yang diperintahkan</string>
    <string name="content_2">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_3_a">3. a. Pangkat dan Gol. Menurut PGPS - 1985</string>
    <string name="content_3_a">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_3_b">&#160;&#160;&#160;&#160;b. Jabatan</string>
    <string name="content_3_b">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_3_c">&#160;&#160;&#160;&#160;c. Tingkat menurut Peraturan Perjalanan Dinas</string>
    <string name="content_3_c">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_4">4. Maksud Perjalanan Dinas</string>
    <string name="content_4">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_5">5. Alat angkutan yang dipergunakan</string>
    <string name="content_5">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_6_a">6. a. Tempat berangkat</string>
    <string name="content_6_a">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_6_b">&#160;&#160;&#160;&#160;b. Tempat tujuan</string>
    <string name="content_6_b">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_7_a">7. a. Lamanya Perjalanan Dinas</string>
    <string name="content_7_a">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_7_b">&#160;&#160;&#160;&#160;b. Tanggal Berangkat</string>
    <string name="content_7_b">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_7_c">&#160;&#160;&#160;&#160;c. Tanggal harus kembali</string>
    <string name="content_7_c">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_8">8. Pembebanan Anggaran</string>
    <string name="title_8_a">&#160;&#160;&#160;&#160;a. Instansi</string>
    <string name="content_8_a">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="title_8_b">&#160;&#160;&#160;&#160;b. Mata Anggaran</string>
    <string name="content_8_b">&#160;&#160;&#160;&#160;%1$s</string>
    <string name="detail">Detail</string>
    <string name="no_data">Tidak ada berkas</string>
    <string name="search_text">Masukkan No.SPT</string>
    <string name="total_anggaran">Total Anggaran</string>
    <string name="rank">Peringkat</string>
    <string name="total_arrival">Jumlah Keberangkatan</string>
    <string name="today">Hari Ini</string>
    <string name="sample">Sample</string>
    <string name="logout">Keluar</string>
    <string name="activity">Aktifitas</string>
    <string name="logout_message">Apakah anda yakin keluar dari aplikasi?</string>
    <string name="error_empty">Lengkapi data</string>
    <string name="load_more">Memuat data &#8230;</string>
    <string name="disconnect">Server Not Found</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="name">Nama</string>
    <string name="position">Jabatan</string>
    <string name="email">Email</string>
    <string name="current_password">Kata Sandi Saat ini</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="re_new_password">Kata Sandi Baru Sekali Lagi</string>
    <string name="update">Perbarui</string>
    <string name="no_notification">Tidak ada notifikasi</string>
    <string name="access_location_not_allowed">Akses lokasi tidak di izinkan</string>
    <string name="about_summary">Sistem Perjalanan Dinas Online\n
    Unit Teknologi Informasi &amp; Komunikasi\n
    Politeknik Pembangunan Pertanian Gowa</string>
    <string name="report_complete">Laporan Lengkap</string>
    <string name="choose_file">Pilih file</string>
    <string name="detail_info">Info Detail</string>
    <string name="send_date">Tanggal Terkirim</string>
    <string name="send_time">Waktu Terkirim</string>
    <string name="close">Tutup</string>
    <string name="location_not_found">Lokasi tidak di temukan</string>
</resources>
