<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/detail_info"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_half"
            android:text="@string/desc"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_summary_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_margin_half"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_date_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_half"
            android:text="@string/send_date"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_summary_date_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_margin_half"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_time_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_half"
            android:text="@string/send_time"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_summary_time_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_margin_half"
            android:textColor="@color/dark"
            android:textSize="@dimen/text_size_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin_half"
            android:text="@string/close" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>