<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ps.sipnas.polbangtan.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            tools:context=".polbangtan.ui.login.LoginActivity">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:context=".polbangtan.ui.login.LoginActivity">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_large"
                    android:layout_height="@dimen/icon_large"
                    android:layout_gravity="center"
                    android:layout_marginStart="-16dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_login" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/signika_bold"
                    android:text="@string/app_name_short"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_extra_large2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/subtitle_login"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tab_icon"
                    android:layout_marginTop="@dimen/tab_icon"
                    android:layout_marginEnd="@dimen/tab_icon"
                    android:hint="@string/nip"
                    android:maxLines="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tab_icon"
                    android:layout_marginEnd="@dimen/tab_icon"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:loadingVisibility="@{viewModel.isVisible}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/PrimaryButton.Outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tab_icon"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/tab_icon"
                    android:onClick="@{()->viewModel.login(context,etUsername.getText().toString(),etPassword.getText().toString())}"
                    android:text="@string/login"
                    app:isEnable="@{viewModel.isVisible}" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/default_margin_half">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="@string/ask_register"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:gravity="center"
                    android:text="@string/click_here"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</layout>